# onlinetalk

./: CMakeLists.txt  plan.md
config/: client.json  server.json
src/client/: main.cpp
src/client/file_transfer/: file_transfer_manager.cpp  file_transfer_manager.h  transfer_state.h
src/client/history/: history_manager.cpp  history_manager.h
src/client/net/: client_api.cpp  client_api.h  net_client.cpp  net_client.h
src/client/state/: client_state.cpp  client_state.h
src/client/ui/: ui_app.cpp  ui_app.h
src/common/: config.cpp  config.h  fs.cpp  fs.h  log.cpp  log.h
src/common/crypto/: sha256.cpp  sha256.h
src/common/net/: byte_buffer.cpp  byte_buffer.h
src/common/protocol/: codec.cpp  codec.h  packet.h
src/server/: main.cpp
src/server/net/: connection.cpp  connection.h  tcp_server.cpp  tcp_server.h
src/server/services/: auth_service.cpp  auth_service.h  file_service.cpp  file_service.h  group_service.cpp  group_service.h  id_generator.cpp  id_generator.h  message_service.cpp  message_service.h
src/server/session/: session_manager.cpp  session_manager.h
src/server/storage/: database.cpp  database.h
